FEM methods change

--- a/ProgammingPDE1-Group 4.ipynb
+++ b/ProgammingPDE1-Group 4.ipynb
@@ -89,6 +89,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "454c0bce",
+   "metadata": {},
+   "source": [
+    "The following order of completion needs to be completed:\n",
+    "1. code the functions 'grid'(linear case), 'assembleMatrix'(linear case), 'rhsConstant'(linear case), 'FEM1DConstant'(linear case) -> complete Test case 0\n",
+    "2. code the functions 'solConstant', 'interpolate'(linear case), 'L2Error'(linear case) -> complete Test case 1\n",
+    "3. code the functions 'rhsDelta'(linear case), 'FEM1DDelta'(linear case), 'solDelta' -> complete Test case 2\n",
+    "4. complete the functions 'grid'(quadratic case), 'assembleMatrix'(quadratic case), 'rhsConstant'(quadratic case), 'interpolate'(quadratic case), 'L2Error'(quadratic case) -> complete Test case 3\n",
+    "5. complete the functions 'rhsDelta'(quadratic case) -> complete Test case 4 and Error Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2722fe2f",
    "metadata": {},
    "source": [
@@ -165,7 +178,7 @@
     "$$\n",
     "\\phi_i(x) = \n",
     "\\begin{cases}\n",
-    " \\frac{x}{x_{i}-x_{i-1}} & \\text{for } x \\in (x_{i-1}, x_{i}] \\\\\n",
+    " \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\text{for } x \\in (x_{i-1}, x_{i}] \\\\\n",
     " \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\text{for } x \\in (x_{i}, x_{i+1}] \\\\\n",
     " 0 & \\text{elsewhere}\n",
     "\\end{cases}\n",
