FEM methods change 1

--- a/ProgammingPDE1-Group 4.ipynb
+++ b/ProgammingPDE1-Group 4.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "### Program Structure\n",
     "\n",
-    "What we have implemented in the code:\n",
+    "What we will implement in the code:\n",
     "\n",
     "- **`def grid(...)`** – Creates the computational grid or mesh used for numerical calculations.  \n",
     "- **`def assembleMatrix(...)`** – Constructs the stiffness matrix, which represents the system’s coefficients in the finite element formulation.  \n",
@@ -247,6 +247,22 @@
    "source": [
     "I.3 Main FEM Frameworks <a name=\"I.3\"></a>\n",
     "--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb83aebf",
+   "metadata": {},
+   "source": [
+    "### Step 1 — Create the grid\n",
+    "\n",
+    "Use the `grid(N, ansatz='linear')` function to build the FEM mesh (node coordinates) on [0, 1].\n",
+    "\n",
+    "- Parameters  \n",
+    "  - `N` — number of elements (integer)  \n",
+    "  - `ansatz` — `'linear'` (default) or `'quad'` (quadratic)\n",
+    "\n",
+    "- Returns: 1D NumPy array of node coordinates.\n"
    ]
   },
   {
@@ -288,6 +304,14 @@
     "\n",
     "    return vec\n",
     "#print(grid(5,ansatz='linear'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141424f5",
+   "metadata": {},
+   "source": [
+    "### Step 2 — Set up the stiffness matrix"
    ]
   },
   {
