FEM methods change 2

--- a/ProgammingPDE1-Group 4.ipynb
+++ b/ProgammingPDE1-Group 4.ipynb
@@ -5,64 +5,19 @@
    "id": "f699b480",
    "metadata": {},
    "source": [
-    "<!DOCTYPE html>\n",
-    "<html lang=\"en\">\n",
-    "<head>\n",
-    "<meta charset=\"UTF-8\">\n",
-    "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-    "<title>Programming Exercise 1</title>\n",
-    "<style>\n",
-    "  body {\n",
-    "    font-family: Arial, Helvetica, sans-serif;\n",
-    "    margin: 40px;\n",
-    "    background-color: #f9f9f9;\n",
-    "    color: #333;\n",
-    "  }\n",
+    "# Programming Exercise 1\n",
     "\n",
-    "  .header {\n",
-    "    display: flex;\n",
-    "    justify-content: space-between;\n",
-    "    align-items: flex-start;\n",
-    "    border-bottom: 2px solid #007acc;\n",
-    "    padding-bottom: 10px;\n",
-    "    margin-bottom: 30px;\n",
-    "  }\n",
+    "---\n",
     "\n",
-    "  .title h1 {\n",
-    "    margin: 0;\n",
-    "    font-size: 2em;\n",
-    "    color: #007acc;\n",
-    "  }\n",
+    "### Group 04\n",
     "\n",
-    "  .authors {\n",
-    "    text-align: right;\n",
-    "    font-size: 0.95em;\n",
-    "    line-height: 1.6;\n",
-    "  }\n",
+    "**Brian Huynh** (476188)  \n",
+    "**Paula Winter** (409827)  \n",
+    "**Paul Budden** (484284)  \n",
+    "**Anar Alizade** (477200)\n",
     "\n",
-    "  .authors strong {\n",
-    "    display: block;\n",
-    "    margin-bottom: 5px;\n",
-    "    font-size: 1.05em;\n",
-    "  }\n",
-    "</style>\n",
-    "</head>\n",
-    "<body>\n",
-    "<header class=\"header\">\n",
-    "  <div class=\"title\">\n",
-    "    <h1>Programming Exercise 1</h1>\n",
-    "  </div>\n",
-    "  <div class=\"authors\">\n",
-    "    <strong>Group 04</strong>\n",
-    "    <br>Brian Huynh (476188)<br>\n",
-    "    Paula Winter (409827)<br>\n",
-    "    Paul Budden (484284)<br>\n",
-    "    Anar Alizade (477200)\n",
-    "  </div>\n",
-    "</header>\n",
-    "\n",
-    "</body>\n",
-    "</html>\n"
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -74,9 +29,9 @@
     "\n",
     "**I. [Coding Workflow](#I)**  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;**I.1 [Import Built-in Libraries](#I.1)**  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;**I.2 [Basis Functions](#I.2)**  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;**I.3 [FEM Frameworks](#I.3)**  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;**I.4 [Helper Functions for Plotting Results](#I.4)**  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;**I.2 [Basis Functions In The Homework](#I.2)**  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;**I.3 [Useful FEM Frameworks](#I.3)**  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;**I.4 [Helper Functions Used For Plotting](#I.4)**  \n",
     "\n",
     "**II. [Tasks](#II)**  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;**II.1 [Task 1](#II.1)**  \n",
@@ -174,17 +129,31 @@
    "id": "cdc704db",
    "metadata": {},
    "source": [
-    "Linear basis functions are defined using two nodes per element.\n",
+    "### Linear Basis Functions\n",
+    "\n",
+    "Linear basis functions are defined using **two nodes per element**.  \n",
+    "For node *i*, the basis function is given by:\n",
+    "\n",
     "$$\n",
     "\\phi_i(x) = \n",
     "\\begin{cases}\n",
-    " \\frac{x-x_{i-1}}{x_{i}-x_{i-1}} & \\text{for } x \\in (x_{i-1}, x_{i}] \\\\\n",
-    " \\frac{x_{i+1}-x}{x_{i+1}-x_{i}} & \\text{for } x \\in (x_{i}, x_{i+1}] \\\\\n",
-    " 0 & \\text{elsewhere}\n",
+    " \\dfrac{x - x_{i-1}}{x_i - x_{i-1}}, & \\text{for } x \\in (x_{i-1}, x_i] \\\\\n",
+    " \\dfrac{x_{i+1} - x}{x_{i+1} - x_i}, & \\text{for } x \\in (x_i, x_{i+1}] \\\\\n",
+    " 0, & \\text{elsewhere}\n",
     "\\end{cases}\n",
-    "$$ \n",
-    "In the following example, the green basis function correpsonds to $\\phi_i(x)$ with $x_{i-1} = 0,\\, x_i = 1,\\, x_{i+1} = 2$. Notice that $\\phi_i(x)$ 'overlaps' with $\\phi_{i-1}(x)$ and $\\phi_{i+1}(x)$.\n",
-    "The illustration shows two elements of the domain, the first element is defined for $ x \\in (0, 1]$, the second element is defined for $ x \\in (1, 2]$."
+    "$$\n",
+    "\n",
+    "In the following example, the **green** basis function corresponds to  \n",
+    "$\\phi_i(x)$ with $x_{i-1} = 0$, $x_i = 1$, and $x_{i+1} = 2$.\n",
+    "\n",
+    "Notice that $\\phi_i(x)$ *overlaps* with its neighboring basis functions  \n",
+    "$\\phi_{i-1}(x)$ and $\\phi_{i+1}(x)$, but is **nonzero** only on the two adjacent elements.\n",
+    "\n",
+    "The illustration below shows two elements of the domain:\n",
+    "- **First element:** $x \\in (0, 1]$  \n",
+    "- **Second element:** $x \\in (1, 2]$\n",
+    "\n",
+    "Together, these basis functions form a continuous piecewise-linear approximation over the domain.\n"
    ]
   },
   {
@@ -397,19 +366,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2132a64c",
+   "metadata": {},
+   "source": [
+    "Creates an **N×N** zero matrix, where **N** is the number of nodes.\n",
+    "If `(ansatz == 'linear')`:\n",
+    "\n",
+    "Each basis function **Φᵢ(x)** is a piecewise linear \"hat\" function, nonzero only over two neighboring elements.\n",
+    "\n",
+    "So each node **i** only interacts with its neighbors **i−1, i, i+1**.\n",
+    "\n",
+    "`grad_Phi` is the derivative of the linear shape function:\n",
+    "\n",
+    "$$\n",
+    "\\Phi_i(x)\n",
+    "$$\n",
+    "\n",
+    "`quad` numerically integrates:\n",
+    "\n",
+    "$$\n",
+    "\\nabla \\Phi_i(x) \\cdot \\nabla \\Phi_j(x)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Step 3 — Assemble the right-hand side (RHS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1c860d6",
    "metadata": {},
    "source": [
-    "The right hand side of the equation can be computed via\n",
+    "### Right-Hand Side Computation in FEM\n",
+    "\n",
+    "The right-hand side of the equation can be computed as:\n",
+    "\n",
     "$$\n",
-    "b_i(x) = \\int_\\Omega f(x) \\, \\phi_i(x) dx \n",
+    "b_i(x) = \\int_\\Omega f(x) \\, \\phi_i(x) \\, dx\n",
     "$$\n",
     "\n",
-    "Tips:\n",
-    "- For a more general purpose FEM solver, you can also change the function definition to 'def rhs(function, lattice, ansatz='linear)'.\n",
-    "- Precomputation of the integral of the delta function is much easier (rhsDelta). The integration of the constant function (rhsConstant) can be numerically evaluated or also precomputed.\n",
-    "- Interation can be done via the 'quad(function, x_0, x_1)' function. Note that this function returns multiple values. The first entry contains the integration result (https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.quad.html).\n",
-    "- The dimension of the stiffness matrix and the right hand side vector need to be the same."
+    "#### Notes for Implementation\n",
+    "\n",
+    "- For a more general-purpose FEM solver, the function can be defined as:  \n",
+    "\n",
+    "```python\n",
+    "def rhs(function, lattice, ansatz='linear'):\n"
    ]
   },
   {
