--- a/individual_solutions/Paul/pe1.ipynb
+++ b/individual_solutions/Paul/pe1.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "6070b623",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
@@ -362,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pde",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
