--- a/individual_solutions/Paul/pe1.ipynb
+++ b/individual_solutions/Paul/pe1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6070b623",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "# needed for ipython to reload local module every run\n",
     "%load_ext autoreload\n",
     "%autoreload 1\n",
-    "%aimport lib, lib.linear, lib.quadratic\n",
+    "%aimport lib, lib.linear, lib.quadratic #automatically reload these modules when they are changed.\n",
     "plt.style.use(\"seaborn-v0_8\")"
    ]
   },
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pde",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
