--- a/individual_solutions/Paul/pe1.ipynb
+++ b/individual_solutions/Paul/pe1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "945a426f",
    "metadata": {},
    "outputs": [
@@ -52,10 +52,11 @@
     "# get analytical solution u, f(x), coefficients b and matrix elements a_ij\n",
     "u_f, u_fpp, u_b, u_a_ij = funcs[\"f2_lin\"]\n",
     "\n",
-    "a = np.array([[u_a_ij(i, j, h) for j in range(1, N)] for i in range(1, N)])\n",
-    "b = np.array([u_b(i, h) for i in range(1, N)])\n",
+    "a = np.array([[u_a_ij(i, j, h) for j in range(1, N)] for i in range(1, N)]) # N-1 x N-1 matrix\n",
+    "b = np.array([u_b(i, h) for i in range(1, N)]) # N-1 vector\n",
+    "# for basis = hat functions\n",
     "# b = np.array([b_j(i, h, u_fpp, x0, xN) for i in range(1, N)])\n",
-    "x = np.linalg.solve(a, b)\n",
+    "x = np.linalg.solve(a, b) # solve for coefficients\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
